--- a/index.html
+++ b/index.html
@@ -14,7 +14,16 @@
     </p>
     <h2>Your personal travel guide</h2>
     <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
-
+    <p>
+      <img src="./resources/images/camp.jpg">
+    </p>
+    <p>
+      <img src="./resources/images/phone.png">
+    </p>
+    <h2>Coming Soon for iPhone and Android</h2>
+    <a class="ctd" href="">Download Excursion (Coming soon!)</a>
+    <p class="footer">© Excursion</p>
+     
 
   </body>
 </html>
