finished unless errors discovered

--- a/index.html
+++ b/index.html
@@ -22,8 +22,10 @@
     </p>
     <h2>Coming Soon for iPhone and Android</h2>
     <a class="ctd" href="">Download Excursion (Coming soon!)</a>
-    <p class="footer">© Excursion</p>
-     
+    <div class="footer">
+      <p>© Excursion</p>
+    </div>
+
 
   </body>
 </html>
